--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -7,7 +7,6 @@ on:
   pull_request:
     branches:
       - master
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -26,7 +25,7 @@ jobs:
           npm ci
           npm run build
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.5.9  // 引用别人的部署插件
+        uses: peaceiris/actions-gh-pages@v2.5.0  // 引用别人的部署插件
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}   // 这里需要设置成你的 token
           BRANCH: gh-pages
