--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -25,9 +25,9 @@ jobs:
           npm ci
           npm run build
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.4  // 引用别人的部署插件
+        uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}   // 这里需要设置成你的 token
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           branch: gh-pages
           folder: docs/.vuepress/dist
 
